--- a/mainsite/templates/mainsite/element_creation.html
+++ b/mainsite/templates/mainsite/element_creation.html
@@ -2,7 +2,7 @@
 
 
 <h1>Element creatin</h1>
-<form action="POST">
+<form method="POST">
     {% csrf_token %}
     {{form}}
     <input type="submit" value="Оформить заказ" class="creation_order_btn">
