--- a/mainsite/templates/mainsite/auth/login.html
+++ b/mainsite/templates/mainsite/auth/login.html
@@ -2,6 +2,7 @@
 <div class="login_page">
 <p>Чтобы продолжить вам нужно авторизоваться</p>
 <form method='POST' action='' class="test">
+    {% csrf_token %}
     <div class="login_field">
         <p>Email</p>
         <input type='text' name="email">
