--- a/mainsite/static/mainsite/css/auth.css
+++ b/mainsite/static/mainsite/css/auth.css
@@ -18,3 +18,20 @@ body {
     width: 300px;
     height: 50px;
 }
+
+.login_page {
+    padding-top: 150px;
+    text-align: center;
+}
+
+.login_page input{
+    width: 300px;
+    height: 50px;
+    margin-bottom: 10px;
+}
+
+.element_creation_container form {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
