--- a/mainsite/templates/mainsite/base.html
+++ b/mainsite/templates/mainsite/base.html
@@ -10,9 +10,21 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link href='{% static "mainsite/css/auth.css" %}' rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'mainsite/css/main.css' %}">
 </head>
 <body class="body">
-{% block content %}
-{% endblock %}
+    <header>
+        <div class="name">
+            {{user.first_name}}
+            {{user.last_name}}
+        </div>
+        <div class="logout">
+            <a href="{% url 'logout' %}">
+                <p>Выход</p>
+            </a>            
+        </div>
+    </header>
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
