--- a/mainsite/templates/mainsite/course_creation.html
+++ b/mainsite/templates/mainsite/course_creation.html
@@ -1,24 +1,27 @@
 {% extends 'mainsite/base.html' %} {% block content %} {% load static %}
-<h1>Course creation</h1>
+<div class="course_creation">
+    <div class="course_creation_h3">
+        <h3>Cоздать курс</h3>
+    </div>
+    
 
 
-<div class="creation_order_page">
-    <form method="POST">
-        {% csrf_token %}
-        <h3>Выбор автомобиля</h3>
-        <input type="text" name="name" value="name" >
-        <div class="creation_order_job_list">
-            {% for user in users%}
-                <div class="creation_order_page_job">
-                    <input type="checkbox" name="{{user.email}}" value="{{user.id}}"> 
-                    <p>{{user.email}}</p>
-                    
-                </div>
-            {%endfor%}
-        </div>
-        <input type="submit" value="Оформить заказ" class="creation_order_btn">
-    </form>
+    <div class="creation_order_page">
+        <form method="POST">
+            {% csrf_token %}
+            <input type="text" name="name" placeholder="Название курса" class="creation_order_page_input">
+            <div class="creation_order_job_list">
+                {% for user in users%}
+                    <div class="creation_order_page_job">
+                        <input type="checkbox" name="{{user.email}}" value="{{user.id}}"> 
+                        <p>{{user.email}}</p>
+                        
+                    </div>
+                {%endfor%}
+            </div>
+            <input type="submit" value="Cоздать" class="creation_course_btn">
+        </form>
+    </div>
 </div>
-
 
 {% endblock %}
